2002-04-28  Dekel Tsur  <dekelts@tau.ac.il>

	* insetfloatlist.C (getScreenLabel): Fix crash in the case where
	float type do not exist.

2002-04-28  Herbert Voss  <voss@perce.de>

	* insetgraphics.C (latex): fix bug with missing file-extension.
	LaTeX still allows a missing "eps" or "ps".

2002-04-26  Angus Leeming  <a.leeming@ic.ac.uk>

	* insetfloat.C (c-tor, wide): translate the name of the float.

2002-04-22  Angus Leeming  <a.leeming@ic.ac.uk>

	* insetcite.[Ch]: take Herbert's patch to give WYSIWYG citation labels
	when using natbib and make it work efficiently. Must emphasise that the
	real work is Herbert's.

2002-04-23  Herbert Voss  <voss@perce.de>

	* insetgraphic.C (prepareFile): fix bug with overwriting and
	deleting an existing *.eps-file in the doc-dir

2002-04-23  Juergen Vigna  <jug@sad.it>

	* insettabular.C (drawCellSelection): fix off by 1 error.

2002-04-22  Juergen Vigna  <jug@sad.it>

	* insettabular.C (setFont): rewoke full selection if it was asked,
	after we changed all we had to change.

	* insettext.C (insetUnlock): code was uninitialized in some situations.

2002-04-19  Herbert Voss  <voss@perce.de>

	* insetgraphic.C (prepareFile): return filename without
	extension if we only export without compiling

2002-04-19  Juergen Vigna  <jug@sad.it>

	* insettext.C (draw): call a fullRebreak on the row where we had a
	change and reset the cursor and selection-cursors.

	* insettabular.C (insetUnlock): 
	(insetButtonPress): call an update before setting the_locking_inset = 0
	as otherwise we don't repaint!
	(update): reset the cursor position when we changed dimensions as
	otherwise our cursor may be on the wrong spot.

2002-04-18  Juergen Vigna  <jug@sad.it>

	* insettabular.C (localDispatch): repaint the cell if it was unlocked.
	(unlockInsetInInset): set the_locking_inset to 0 only AFTER we made the
	redraw otherwise we won't redraw.

	* insettext.C (draw): fixed the setting of LyXText::first_y it was