@@ -1,3 +1,7 @@
+2002-05-01  Angus Leeming  <a.leeming@ic.ac.uk>
+
+	* InsetgraphicsParams.[Ch]: whitespace.
+
 2002-04-28  Dekel Tsur  <dekelts@tau.ac.il>
 
 	* insetfloatlist.C (getScreenLabel): Fix crash in the case where
